# GAMES301

./: README.md
hws/hw1/: README.md  circleBoundary.m  find2DTriangle.m  findBaryCententricCoordinate.m  findEdges.m  findHE.m  findOneRing.m  floater.m  hw1.m  project2Plane.m  test.m  tutte.m
hws/hw2/: .gitignore  ComputePfPx.m  README.md  circleBoundary.m  findJacobian.m  flipAvoid2D.m  hw2.m  polarDecomposition.m  testPfPx.m  vec.m
hws/hw2/src/: SDEigenSystem.m  computeGradient.m  computePfPx.m  computePphiPf.m  computeSDEnergy.m  computeTotalSDEnergy.m  findJacobian.m  lineSearch.m  projectHessian.m  projectedNewtonSolver.m  projectedNewtonSolverSave.m  projectedNewtonStep.m
hws/hw2/utils/: Area.m  polarSVD.m  svd_rv.m
hws/hw3/: .gitignore  LSCM.m  MVCTutte.m  README.md  cotLaplacian.m  doubleArea.m  hw3.m
hws/hw3/src/: LSCM.m  MVCTutte.m
hws/hw3/utils/: project2Plane.m
hws/hw4/: .gitignore  BFF.m  BFFAngle.m  BFFAuto.m  BFFSquare.m  README.md  bestFitCurve.m  discreteCurvature.m  hw4.m  matrixInv2x2.m  readObj.m
hws/hw4/src/: BFFAngle.m  BFFAuto.m  BFFScale.m  BFFSquare.m  BFFUniform.m  cotLaplacian.m  discreteCurvature.m
hws/hw4/util/: drawmesh.m  findBoundary.m
hws/matlab_template/: test.m
sample_hws/hw1/matlab/: floater.m  main.m  setBoundary.m
sample_hws/hw2/c++/hw2/: CMakeLists.txt  README.md
sample_hws/hw2/c++/hw2/src/: arap.cpp  arap.h  eigen_system.h  line_search.h  main.cpp  mips.cpp  mips.h  parametrization.h  symmetric_dirichlet.cpp  symmetric_dirichlet.h  tutte.h  utils.h
sample_hws/hw2/matlab/: demo_camel.m  demo_cow.m  (+2 more)
(+44 files in other folders)
